New in v1.0.4 (????/??/??)
--------------------------

Files with ACLs will not be unnecessarily marked as changed (bug
report by Carsten Lorenz).

Another fix for long-filenames crash, this time when a long-named
directory with files in it gets deleted


New in v1.0.3 (2005/11/25)
--------------------------

Applied Alec Berryman's patch to update the no-compression regexp.

Alec Berryman's fs_abilities patch is supposed to help with AFS.

Fixed (version of) filename-too-long crash when quoting.

Due to very detailed error report from Yoav, fixed a "Directory not
empty" error that can arise on emulated filesystems like NFS and
EncFS.

Cleaned up remove older than report, and also stopped it from deleting
current data files if you specify a time later than the current
mirror.

--compare fix, now you don't need to specify the exact time of a
session to avoid a "no metadata" error.


New in v1.0.2 (2005/10/24)
--------------------------

Fix for spurious security violation from --create-full-path (reported
by Mike Bydalek).

Fix for bug 14545 which was introduced in version 1.0.1:  Quoting
caused a spurious security violation.  (Important for Mac OS X)

An error reading carbonfile data on Mac OS X should no longer cause a
crash.  (Thanks to Kevin Horton for testing.)

Carbonfile support now defaults to off, even if the system appears to
support it.  It can be manually enabled with the --carbonfile switch.
If you know something about Mac OS X and want to look at the
carbonfile code so it can be re-enabled by default, please do so :)
(help available from list)

Fix for bug #14799 reported by Bob McKay:  Crash when backing up files
with high permissions (like suid) to some FAT systems.


New in v1.0.1 (2005/09/10)
--------------------------

Fix for "'filetype' of type exceptions.KeyError" error when restoring.
Test case provided by Davy Durham.  (The problem was the
mirror_metadata file could become un-synced when a file is deleted